--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@
   clip-path: polygon(50% 25%, 100% 25%, 100% 75%, 50% 100%, 50% 75%);
 }
 
-.outer-fixed-bottom-left {
+.outer-fixed-bottom {
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 75%, 50% 25%);
 }
 
